Make HandlerLoader use ScanClassProvicder